Add copy to index.html and edit the corresponding elements in css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p class="download"><a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*5ct3nq*_ga*ODkzNzkzNjExOS4xNjg3Mjc2MDM0*_ga_3LRZM6TM9L*MTcwNzkzNzQ0My45My4xLjE3MDc5Mzc1NTEuMjAuMC4w#">Download Excursion (Coming soon!)</a></p>
+    <p class="download">
+        <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*5ct3nq*_ga*ODkzNzkzNjExOS4xNjg3Mjc2MDM0*_ga_3LRZM6TM9L*MTcwNzkzNzQ0My45My4xLjE3MDc5Mzc1NTEuMjAuMC4w#">Download Excursion (Coming soon!)</a>
+    </p>
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p class="download">
+        <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*5ct3nq*_ga*ODkzNzkzNjExOS4xNjg3Mjc2MDM0*_ga_3LRZM6TM9L*MTcwNzkzNzQ0My45My4xLjE3MDc5Mzc1NTEuMjAuMC4w#">Download Excursion (Coming soon!)</a>
+    </p>
+
+    <footer>
+        <p class="copyright">© Excursion</p>
+    </footer>
+    
 </body>
 </html>
