Add media files to index.html

--- a/index.html
+++ b/index.html
@@ -12,16 +12,28 @@
         <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*5ct3nq*_ga*ODkzNzkzNjExOS4xNjg3Mjc2MDM0*_ga_3LRZM6TM9L*MTcwNzkzNzQ0My45My4xLjE3MDc5Mzc1NTEuMjAuMC4w#">Download Excursion (Coming soon!)</a>
     </p>
 
+    <video autoplay muted loop>
+        <source src="./resources/excursion.mp4" type="video/mp4">
+    </video>
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
+    <p>
+        <img src="./resources/camp.jpg"/>
+    </p>
+
+    <p>
+        <img src="./resources/phone.png"/>
+    </p>
+ 
     <h2>Coming Soon for iPhone and Android</h2>
     <p class="download">
         <a href="https://content.codecademy.com/programs/freelance-one/excursion/index.html?_gl=1*5ct3nq*_ga*ODkzNzkzNjExOS4xNjg3Mjc2MDM0*_ga_3LRZM6TM9L*MTcwNzkzNzQ0My45My4xLjE3MDc5Mzc1NTEuMjAuMC4w#">Download Excursion (Coming soon!)</a>
     </p>
 
-    <footer>
-        <p class="copyright">© Excursion</p>
+    <footer class="copyright">
+        <p>© Excursion</p>
     </footer>
     
 </body>
